@@ -55,9 +55,7 @@ function update_pandora_get_packages_online_ajax($ajax = true) {
 	if ($result == false) {
 		$return['last'] = $last;
 		$return['correct'] = 0;
-		$return['package'] = ui_print_error_message(
-			array('message' => __('Error download packages.'),
-				'no_close' => true), '', true);
+		$return['package'] = __('Error download packages.');
 		$return['end'] = 1;
 	}
 	else {
@@ -128,62 +126,84 @@ function update_pandora_download_package() {
 		$return = array('correct' => 0);
 	}
 	else {
-		$conf_update_pandora['last_contact'] = time();
-		update_pandora_update_conf();
-		
 		$value = $result->value();
 		$package_url = $value->scalarval();
 		
-		if (empty($package_url)) {
-			$info_json = json_encode(array('correct' => 0));
-			
-			file_put_contents('/tmp/' . $package . '.info.txt', $info_json, LOCK_EX);
+		if ($conf_update_pandora['download_mode'] == 'wget') {
+			$command = "wget " .
+				$package_url . " -P " . $dir .
+				" -o /tmp/" . $package . ".info.txt";
 			
 			$return = array('correct' => 0);
+			
+			exec($command);
+			unlink('/tmp/' . $package . '.info.txt');
+			
+			$return['correct'] = 1;
 		}
 		else {
-			$targz = $package;
-			$url = $package_url;
-			
-			$file = fopen($dir . $targz, "w");
-			
-			$mch = curl_multi_init();
-			$c = curl_init();
-			
-			curl_setopt($c, CURLOPT_URL, $url);
-			curl_setopt($c, CURLOPT_RETURNTRANSFER, true);
-			curl_setopt($c, CURLOPT_FOLLOWLOCATION, true);
-			curl_setopt($c, CURLOPT_FILE, $file);
-			
-			curl_multi_add_handle($mch ,$c);
-			$running = null;
-			do {
-				curl_multi_exec($mch ,$running);
-				if ($running == 0) {
-					fclose($file);
-				}
+			if (empty($package_url)) {
+				$info_json = json_encode(array('correct' => 0));
 				
-				$info = curl_getinfo ($c);
+				file_put_contents('/tmp/' . $package . '.info.txt',
+					$info_json, LOCK_EX);
 				
-				$data = array();
-				$data['correct'] = 1;
-				$data['filename'] = $targz;
-				$data['size'] = $info['download_content_length'];
-				$data['size_download'] = $info['size_download'];
-				$data['speed_download'] = $info['speed_download'];
-				$data['total_time'] = $info['total_time'];
-				
-				$info_json = json_encode($data);
-				
-				file_put_contents('/tmp/' . $package . '.info.txt', $info_json, LOCK_EX);
-				
-				sleep(1);
+				$return = array('correct' => 0);
 			}
-			while($running > 0);
-			
-			$return = array('correct' => 1);
+			else {
+				$targz = $package;
+				$url = $package_url;
+				
+				$file = fopen($dir . $targz, "w");
+				
+				$mch = curl_multi_init();
+				$c = curl_init();
+				
+				curl_setopt($c, CURLOPT_URL, $url);
+				curl_setopt($c, CURLOPT_RETURNTRANSFER, true);
+				curl_setopt($c, CURLOPT_FOLLOWLOCATION, true);
+				curl_setopt($c, CURLOPT_FILE, $file);
+				
+				curl_multi_add_handle($mch ,$c);
+				$running = null;
+				do {
+					curl_multi_exec($mch ,$running);
+					if ($running == 0) {
+						fclose($file);
+					}
+					
+					$info = curl_getinfo ($c);
+					html_debug_print($info, true);
+					
+					$data = array();
+					$data['correct'] = 1;
+					$data['filename'] = $targz;
+					$data['size'] = $info['download_content_length'];
+					$data['size_download'] = $info['size_download'];
+					$data['speed_download'] = $info['speed_download'];
+					$data['total_time'] = $info['total_time'];
+					
+					$info_json = json_encode($data);
+					
+					file_put_contents('/tmp/' . $package . '.info.txt',
+						$info_json, LOCK_EX);
+					
+					sleep(1);
+				}
+				while($running > 0);
+				
+				$return = array('correct' => 1);
+			}
+		}
+		
+		if ($return['correct']) {
+			$conf_update_pandora['last_contact'] = time();
+			update_pandora_update_conf();
 		}
 	}
+	
+	$return['mode'] = $conf_update_pandora['download_mode'];
+	$return['filename'] = $package;
 	
 	echo json_encode($return);
 }
@@ -191,60 +211,73 @@ function update_pandora_download_package() {
 function update_pandora_check_download_package() {
 	global $config;
 	
+	global $conf_update_pandora;
+	if (empty($conf_update_pandora))
+		$conf_update_pandora = update_pandora_get_conf();
+	
 	require_once ($config["homedir"] . '/include/functions_graph.php');
 	
 	sleep(1);
 	
-	$package = get_parameter('package', '');
-	$return = array('correct' => 1,
-		'info_download' => "<b>" . __('Size') . ":</b> %s/%s " . __('bytes') . " " .
-			"<b>" . __('Speed') . ":</b> %s " . __('bytes/second') ."<br />" .
-			"<b>" . __('Time') . ":</b> %s",
-		'progres_bar' => progress_bar(0, 300, 20, '0%', 1, false, "#00ff00"),
-		'progres_bar_text' => '0%',
-		'percent' => 0);
-	
-	$info_json = @file_get_contents('/tmp/' . $package . '.info.txt');
-	
-	$info = json_decode($info_json, true);
-	
-	if ($info['correct'] == 0) {
-		$return['correct'] = 0;
-		unlink('/tmp/' . $package . '.info.txt');
+	if ($conf_update_pandora['download_mode'] == 'wget') {
+		$return = array('correct' => 1,
+			'info_download' => __('In progress...') . html_print_image('images/spinner.gif', true),
+			'mode' => 'wget');
 	}
 	else {
-		$percent = 0;
-		$size_download = 0;
-		$size = 0;
-		$speed_download = 0;
-		$total_time = 0;
-		if ($info['size_download'] > 0) {
-			$percent = format_numeric(
-				($info['size_download'] / $info['size']) * 100, 2);
-			$return['percent'] = $percent;
-			$size_download = $info['size_download'];
-			$size = $info['size'];
-			$speed_download = $info['speed_download'];
-			$total_time = $info['total_time'];
-			
-			$return['info_download'] = sprintf($return['info_download'],
-				format_for_graph($size_download, 2), format_for_graph($size, 2),
-				format_for_graph($speed_download, 2),
-				human_time_description_raw($total_time));
+		
+		$package = get_parameter('package', '');
+		$return = array('correct' => 1,
+			'info_download' => "<b>" . __('Size') . ":</b> %s/%s " . __('bytes') . " " .
+				"<b>" . __('Speed') . ":</b> %s " . __('bytes/second') ."<br />" .
+				"<b>" . __('Time') . ":</b> %s",
+			'progres_bar' => progress_bar(0, 300, 20, '0%', 1, false, "#00ff00"),
+			'progres_bar_text' => '0%',
+			'percent' => 0,
+			'mode' => 'curl');
+		
+		$info_json = @file_get_contents('/tmp/' . $package . '.info.txt');
+		
+		$info = json_decode($info_json, true);
+		
+		if ($info['correct'] == 0) {
+			$return['correct'] = 0;
+			unlink('/tmp/' . $package . '.info.txt');
 		}
 		else {
-			$return['info_download'] = __('<b>Starting: </b> connect to server');
+			$percent = 0;
+			$size_download = 0;
+			$size = 0;
+			$speed_download = 0;
+			$total_time = 0;
+			if ($info['size_download'] > 0) {
+				$percent = format_numeric(
+					($info['size_download'] / $info['size']) * 100, 2);
+				$return['percent'] = $percent;
+				$size_download = $info['size_download'];
+				$size = $info['size'];
+				$speed_download = $info['speed_download'];
+				$total_time = $info['total_time'];
+				
+				$return['info_download'] = sprintf($return['info_download'],
+					format_for_graph($size_download, 2), format_for_graph($size, 2),
+					format_for_graph($speed_download, 2),
+					human_time_description_raw($total_time));
+			}
+			else {
+				$return['info_download'] = __('<b>Starting: </b> connect to server');
+			}
+			
+			$img = progress_bar($percent, 300, 20, $percent . '%', 1, false, "#00ff00");
+			$return['progres_bar'] = $img;
+			preg_match_all('/src=[\'\"]([^\"^\']*)[\'\"]/i', $img, $attr);
+			$return['progres_bar_src'] = $attr[1];
+			preg_match_all('/alt=[\'\"]([^\"^\']*)[\'\"]/i', $img, $attr);
+			$return['progres_bar_alt'] = $attr[1];
+			preg_match_all('/title=[\'\"]([^\"^\']*)[\'\"]/i', $img, $attr);
+			$return['progres_bar_title'] = $attr[1];
+			$return['filename'] = $info['filename'];
 		}
-		
-		$img = progress_bar($percent, 300, 20, $percent . '%', 1, false, "#00ff00");
-		$return['progres_bar'] = $img;
-		preg_match_all('/src=[\'\"]([^\"^\']*)[\'\"]/i', $img, $attr);
-		$return['progres_bar_src'] = $attr[1];
-		preg_match_all('/alt=[\'\"]([^\"^\']*)[\'\"]/i', $img, $attr);
-		$return['progres_bar_alt'] = $attr[1];
-		preg_match_all('/title=[\'\"]([^\"^\']*)[\'\"]/i', $img, $attr);
-		$return['progres_bar_title'] = $attr[1];
-		$return['filename'] = $info['filename'];
 	}
 	
 	echo json_encode($return);
